# synapse

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT-PLAN.md  README.md  arch-diag.md  dev-road.md
docs/diagrams/: 00-architecture-overview.md  01-system-architecture.mmd  02-websocket-flow.mmd  03-media-upload.mmd  04-database-schema.mmd
docs/specs/: 00-feature-matrix.md  01-dev-roadmap.md
migrations/: 0001_create_users.sql  0002_create_workspaces.sql  0003_create_channels.sql  0004_create_workspace_members.sql  0005_create_messages.sql  0006_create_board_posts.sql  0007_create_board_ack.sql
src/: config.rs  main.rs
src/db/: mod.rs
src/middleware/: auth.rs
src/routes/: auth.rs  board.rs  channel.rs  message.rs  mod.rs  workspace.rs
src/ws/: handler.rs  manager.rs
